testing new themes

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-time-machine
 title: eyechor games
 description: bookmark this page and come back to it later... it's a work-in-progress ;)
