--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-time-machine
 title: eyechor games
+#tagline: 
 description: bookmark this page and come back to it later... it's a work-in-progress ;)
