updating changes to website

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-time-machine
-title: eyechor games
+title: Eyechor Games
 #tagline: 
-description: bookmark this page and come back to it later... it's a work-in-progress ;)
+description: Official Website of Eyechor Games!
