some new changes

--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,4 @@ theme: jekyll-theme-time-machine
 title: Eyechor Games
 #tagline: 
 description: Official Website of Eyechor Games!
+permalink: /404.html
